Bvv: fix accuracy of point selection/bookmarking